# switchboard-mcp

./: LICENSE  README.md  pyproject.toml
src/switchboard_mcp/: __init__.py  __main__.py  server.py
